tests/baselines/reference/numericIndexerConstraint1.errors.txt
tests/cases/compiler/numericIndexerConstraint1.ts(3,5): error TS2323: Type 'number' is not assignable to type 'Foo'.
  Property 'foo' is missing in type 'Number'.


==== tests/cases/compiler/numericIndexerConstraint1.ts (1 errors) ====
    class Foo { foo() { } }
    var x: { [index: string]: number; };
    var result: Foo = x["one"]; // error
        ~~~~~~
!!! error TS2323: Type 'number' is not assignable to type 'Foo'.
!!! error TS2323:   Property 'foo' is missing in type 'Number'.
    